adding wooper stuff

--- a/index.html
+++ b/index.html
@@ -116,9 +116,7 @@
                               <p>
                                  Designed to seamlessly fill the void left by the Former Silph Road's asset team. Inside this folder you will also find alternate versions, as well as pre-made templates for button makers. Be sure to print them at actual size with borderless printing if your printer supports it.
                                  <div class="credits">
-                                    Badge Design: <a href="https://www.instagram.com/lux.imity_xx/">xLuximityx</a> <br />
-                                    Base Template: Former Silph Road<br />
-                                    Pokemon Sprite: Pokémon Company
+                                    Badge Design: <a href="https://www.instagram.com/lux.imity_xx/">xLuximityx</a>
                                  </div>
                               </p>
                            </div>
@@ -143,7 +141,7 @@
                               <p>
                                  Designed to seamlessly fill the void left by the Former Silph Road's asset team. Inside this folder you will also find alternate versions, as well as pre-made templates for button makers. Be sure to print them at actual size with borderless printing if your printer supports it.
                                  <div class="credits">
-                                    <a href="https://www.instagram.com/lux.imity_xx/">xLuximityx</a><br />
+                                    Credit: <a href="https://www.instagram.com/lux.imity_xx/">xLuximityx</a><br>
                                  </div>
                               </p>
                            </div>
@@ -177,6 +175,96 @@
                                  </div>
                               </p>
                            </div>
+                           <div class="asset">
+                              <a href="https://www.printables.com/model/625382-pokemon-go-community-day-77-coin-wooper">
+                              <img alt="Woopers Candy" src="./assets/2023/2023-11-05-community-day/wooper-coin-model.webp">
+                              <div class="asset-label">
+                                 <img src="https://printables.com/favicon.ico" alt="Printables Link Label">
+                              </div>
+                              <label>Wooper Coin</label>
+                              </a>
+                              <p>
+                                 "Pokemon Go Community Day #77 coin - Wooper"
+                                 <div class="credits">
+                                    Credit: <a href="https://www.printables.com/@808Asher">808Asher</a>
+                                 </div>
+                              </p>
+                           </div>
+                           <div class="asset">
+                              <a href="https://www.printables.com/model/364620-pokemon-inspired-paldean-wooper-tabletop-dnd-minia">
+                              <img alt="Woopers Candy" src="./assets/2023/2023-11-05-community-day/wooper-model.webp">
+                              <div class="asset-label">
+                                 <img src="https://printables.com/favicon.ico" alt="Printables Link Label">
+                              </div>
+                              <label>Paldean Wooper Model</label>
+                              </a>
+                              <p>
+                                 "Pokemon inspired, Paldean Wooper, Tabletop DnD miniature"
+                                 <div class="credits">
+                                    Credit: <a href="https://www.printables.com/@PixelChroniclesMinia">PixelChroniclesMiniatures</a>
+                                 </div>
+                              </p>
+                           </div>
+                           <div class="asset">
+                              <a href="https://www.printables.com/model/328711-pokemon-inspired-wooper-tabletop-dnd-miniature">
+                              <img alt="Paldean Wooper 3D Model Render" src="./assets/2023/2023-11-05-community-day/wooper-model.webp">
+                              <div class="asset-label">
+                                 <img src="https://printables.com/favicon.ico" alt="Printables Link Label">
+                              </div>
+                              <label>Johtonian Wooper Model</label>
+                              </a>
+                              <p>
+                                 "Wooper from the Pokemon!"
+                                 <div class="credits">
+                                    Credit: <a href="https://www.printables.com/@PixelChroniclesMinia">PixelChroniclesMiniatures</a>
+                                 </div>
+                              </p>
+                           </div>
+                           <div class="asset">
+                              <a href="https://www.printables.com/model/364615-pokemon-inspired-clodsire-tabletop-dnd-miniature">
+                              <img alt="Clodsire Tabletop D&D miniature 3D Model Render" src="./assets/2023/2023-11-05-community-day/wooper-model.webp">
+                              <div class="asset-label">
+                                 <img src="https://printables.com/favicon.ico" alt="Printables Link Label">
+                              </div>
+                              <label>Clodsire Model</label>
+                              </a>
+                              <p>
+                                 "Clodsire from the Pokemon! 
+                                 <div class="credits">
+                                    Credit: <a href="https://www.printables.com/@PixelChroniclesMinia">PixelChroniclesMiniatures</a>
+                                 </div>
+                              </p>
+                           </div>
+                           <div class="asset">
+                              <a href="https://www.printables.com/model/332185-low-poly-wooper-paldean">
+                              <img alt="Low Poly Paldean Wooper 3D Print" src="./assets/2023/2023-11-05-community-day/wooper-model.webp">
+                              <div class="asset-label">
+                                 <img src="https://printables.com/favicon.ico" alt="Printables Link Label">
+                              </div>
+                              <label>Low Poly Paldean Wooper Model</label>
+                              </a>
+                              <p>
+                                 "low poly wooper (Paldean)"
+                                 <div class="credits">
+                                    Credit: <a href="https://www.printables.com/@luckyboi_380639">lucky boi</a>
+                                 </div>
+                              </p>
+                           </div>
+                           <div class="asset">
+                              <a href="https://www.printables.com/model/606815-low-poly-clodsire">
+                              <img alt="Low Poly Clodsire 3D Print" src="./assets/2023/2023-11-05-community-day/wooper-model.webp">
+                              <div class="asset-label">
+                                 <img src="https://printables.com/favicon.ico" alt="Printables Link Label">
+                              </div>
+                              <label>Low Poly Clodsire Model</label>
+                              </a>
+                              <p>
+                                 "Ive made the pre evolution of this guy and had him sitting in my files, so I decided to publish him"
+                                 <div class="credits">
+                                    Credit: <a href="https://www.printables.com/@luckyboi_380639">lucky boi</a>
+                                 </div>
+                              </p>
+                           </div>
                         </div>
                         <hr style="margin:25px;border-color: #555;">
                      </div>
@@ -199,8 +287,8 @@
                               <p>
                                  Designed to seamlessly fill the void left by the Former Silph Road's asset team. Inside this folder you will also find alternate versions, as well as pre-made templates for button makers. Be sure to print them at actual size with borderless printing if your printer supports it.
                                  <div class="credits">
-                                    Badge Design: <a href="https://www.instagram.com/lux.imity_xx/">xLuximityx</a> <br />
-                                    Base Template: Former Silph Road<br />
+                                    Badge Design: <a href="https://www.instagram.com/lux.imity_xx/">xLuximityx</a> <br>
+                                    Base Template: Former Silph Road<br>
                                     Pokemon Sprite: Pokémon Company
                                  </div>
                               </p>
@@ -254,8 +342,8 @@
                               <p>
                                  Designed to seamlessly fill the void left by the Former Silph Road's asset team. Inside this folder you will also find alternate versions, as well as pre-made templates for button makers. Be sure to print them at actual size with borderless printing if your printer supports it.
                                  <div class="credits">
-                                    Badge Design: <a href="https://www.instagram.com/lux.imity_xx/">xLuximityx</a> <br />
-                                    Base Template: Former Silph Road<br />
+                                    Badge Design: <a href="https://www.instagram.com/lux.imity_xx/">xLuximityx</a> <br>
+                                    Base Template: Former Silph Road<br>
                                     Pokemon Sprite: Pokémon Company
                                  </div>
                               </p>
@@ -324,8 +412,8 @@
                               <p>
                                  Designed to seamlessly fill the void left by the Former Silph Road's asset team. Inside this folder you will also find alternate versions, as well as pre-made templates for button makers. Be sure to print them at actual size with borderless printing if your printer supports it.
                                  <div class="credits">
-                                    Badge Design: <a href="https://www.instagram.com/lux.imity_xx/">xLuximityx</a> <br />
-                                    Base Template: Former Silph Road<br />
+                                    Badge Design: <a href="https://www.instagram.com/lux.imity_xx/">xLuximityx</a> <br>
+                                    Base Template: Former Silph Road<br>
                                     Pokemon Sprite: Pokémon Company
                                  </div>
                               </p>
@@ -394,8 +482,8 @@
                               <p>
                                  Designed to seamlessly fill the void left by the Former Silph Road's asset team. Inside this folder you will also find alternate versions.
                                  <div class="credits">
-                                    Badge Design: <a href="https://www.instagram.com/lux.imity_xx/">xLuximityx</a> <br />
-                                    Base Template: Former Silph Road<br />
+                                    Badge Design: <a href="https://www.instagram.com/lux.imity_xx/">xLuximityx</a> <br>
+                                    Base Template: Former Silph Road<br>
                                     Pokemon Sprite: Pokémon Company
                                  </div>
                               </p>
@@ -506,8 +594,8 @@
                               <p>
                                  Designed to seamlessly fill the void left by the Former Silph Road's asset team. Inside this folder you will also find alternate versions, as well as pre-made templates for button makers. Be sure to print them at actual size with borderless printing if your printer supports it.
                                  <div class="credits">
-                                    Badge Design: <a href="https://www.instagram.com/lux.imity_xx/">xLuximityx</a> <br />
-                                    Base Template: Former Silph Road<br />
+                                    Badge Design: <a href="https://www.instagram.com/lux.imity_xx/">xLuximityx</a> <br>
+                                    Base Template: Former Silph Road<br>
                                     Pokemon Sprite: Pokémon Company
                                  </div>
                               </p>
@@ -593,8 +681,8 @@
                               <p>
                                  Designed to seamlessly fill the void left by the Former Silph Road's asset team. Inside this folder you will also find alternate versions, as well as pre-made templates for button makers. Be sure to print them at actual size with borderless printing if your printer supports it.
                                  <div class="credits">
-                                    Badge Design: <a href="https://www.instagram.com/lux.imity_xx/">xLuximityx</a> <br />
-                                    Base Template: Former Silph Road<br />
+                                    Badge Design: <a href="https://www.instagram.com/lux.imity_xx/">xLuximityx</a> <br>
+                                    Base Template: Former Silph Road<br>
                                     Pokemon Sprite: Pokémon Company
                                  </div>
                               </p>
@@ -687,8 +775,8 @@
                               <label>Badge</label>
                               </a>
                               <p>
-                                 Badge Design: <a href="https://www.instagram.com/lux.imity_xx/">xLuximityx</a> <br />
-                                 Base Template: Former Silph Road<br />
+                                 Badge Design: <a href="https://www.instagram.com/lux.imity_xx/">xLuximityx</a> <br>
+                                 Base Template: Former Silph Road<br>
                                  Blastoise Sprite: Pokémon Company
                               </p>
                            </div>
@@ -701,8 +789,8 @@
                               <label>Badge as Banner</label>
                               </a>
                               <p>
-                                 Badge Design: <a href="https://www.instagram.com/lux.imity_xx/">xLuximityx</a> <br />
-                                 Base Template: Former Silph Road<br />
+                                 Badge Design: <a href="https://www.instagram.com/lux.imity_xx/">xLuximityx</a> <br>
+                                 Base Template: Former Silph Road<br>
                                  Blastoise Sprite: Pokémon Company
                               </p>
                            </div>
