Expand max width, fix images for 3D Models in wooper day, added gym badges

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
    </head>
    <body>
       <div class="container"
-         style="margin:30px auto;padding: 0;border-top: 10px dashed rgba(61, 61, 61, 0.72);max-width:680px;">
+         style="margin:30px auto;padding: 0;border-top: 10px dashed rgba(61, 61, 61, 0.72);max-width:920px;">
          <div class="row">
             <div class="col-md-12 text-center" style="box-shadow: 0 0 10px 1px rgba(0, 0, 0, 0.23);padding: 0;">
                <div class="" style="overflow:hidden;height: 230px;position: relative;z-index: 1;">
@@ -161,6 +161,18 @@
                               </p>
                            </div>
                            <div class="asset">
+                              <a href="https://drive.google.com/drive/folders/1PhxYI8p1HjEjwjEE_3X8LLlBX2cg2pbt?usp=drive_link">
+                              <img alt="Wooper CDL Badge" src="./assets/2023/2023-11-05-community-day/wooper-badge-stacked.png">
+                              <div class="asset-label">
+                                 <img src="./img/gdrive-folder-icon.png" alt="Google Drive Folder Label">
+                              </div>
+                              <label>Gym Badges</label>
+                              </a>
+                              <p>
+                                 Designed to be a Discord emoji for the purpose of being used as a PokeNav badge icon by @_kaiisen in the PGCC Discord
+                              </p>
+                           </div>
+                           <div class="asset">
                               <a href="./assets/2023/2023-11-05-community-day/woopers_candy.png">
                               <img alt="Woopers Candy" src="./assets/2023/2023-11-05-community-day/woopers_candy.png">
                               <div class="asset-label">
@@ -192,7 +204,7 @@
                            </div>
                            <div class="asset">
                               <a href="https://www.printables.com/model/364620-pokemon-inspired-paldean-wooper-tabletop-dnd-minia">
-                              <img alt="Woopers Candy" src="./assets/2023/2023-11-05-community-day/wooper-model.webp">
+                              <img alt="Woopers Candy" src="./assets/2023/2023-11-05-community-day/paldean-wooper-model.webp">
                               <div class="asset-label">
                                  <img src="https://printables.com/favicon.ico" alt="Printables Link Label">
                               </div>
@@ -201,7 +213,7 @@
                               <p>
                                  "Pokemon inspired, Paldean Wooper, Tabletop DnD miniature"
                                  <div class="credits">
-                                    Credit: <a href="https://www.printables.com/@PixelChroniclesMinia">PixelChroniclesMiniatures</a>
+                                    Credit: <a href="https://www.printables.com/@PixelChroniclesMinia">Pixel Chronicles Miniatures</a>
                                  </div>
                               </p>
                            </div>
@@ -216,13 +228,13 @@
                               <p>
                                  "Wooper from the Pokemon!"
                                  <div class="credits">
-                                    Credit: <a href="https://www.printables.com/@PixelChroniclesMinia">PixelChroniclesMiniatures</a>
+                                    Credit: <a href="https://www.printables.com/@PixelChroniclesMinia">Pixel Chronicles Miniatures</a>
                                  </div>
                               </p>
                            </div>
                            <div class="asset">
                               <a href="https://www.printables.com/model/364615-pokemon-inspired-clodsire-tabletop-dnd-miniature">
-                              <img alt="Clodsire Tabletop D&D miniature 3D Model Render" src="./assets/2023/2023-11-05-community-day/wooper-model.webp">
+                              <img alt="Clodsire Tabletop D&D miniature 3D Model Render" src="./assets/2023/2023-11-05-community-day/clodsire-model.webp">
                               <div class="asset-label">
                                  <img src="https://printables.com/favicon.ico" alt="Printables Link Label">
                               </div>
@@ -231,13 +243,13 @@
                               <p>
                                  "Clodsire from the Pokemon! 
                                  <div class="credits">
-                                    Credit: <a href="https://www.printables.com/@PixelChroniclesMinia">PixelChroniclesMiniatures</a>
+                                    Credit: <a href="https://www.printables.com/@PixelChroniclesMinia">Pixel Chronicles Miniatures</a>
                                  </div>
                               </p>
                            </div>
                            <div class="asset">
                               <a href="https://www.printables.com/model/332185-low-poly-wooper-paldean">
-                              <img alt="Low Poly Paldean Wooper 3D Print" src="./assets/2023/2023-11-05-community-day/wooper-model.webp">
+                              <img alt="Low Poly Paldean Wooper 3D Print" src="./assets/2023/2023-11-05-community-day/lowpoly-wooper-model.webp">
                               <div class="asset-label">
                                  <img src="https://printables.com/favicon.ico" alt="Printables Link Label">
                               </div>
@@ -252,7 +264,7 @@
                            </div>
                            <div class="asset">
                               <a href="https://www.printables.com/model/606815-low-poly-clodsire">
-                              <img alt="Low Poly Clodsire 3D Print" src="./assets/2023/2023-11-05-community-day/wooper-model.webp">
+                              <img alt="Low Poly Clodsire 3D Print" src="./assets/2023/2023-11-05-community-day/lowpoly-clodsire-model.webp">
                               <div class="asset-label">
                                  <img src="https://printables.com/favicon.ico" alt="Printables Link Label">
                               </div>
