Adding Mega Garchomp Raid Hour

--- a/index.html
+++ b/index.html
@@ -124,6 +124,31 @@
                         <hr style="margin:25px;border-color: #555;">
                      </div>
                      <!-- End Dec CDay -->
+                     <!-- Start Mega Garchomp Raid Day -->
+                     <div class="asset-section" data-type="special-events">
+                        <h5><a class="page-anchor" id="GarchompRaidDay2023" href="#GarchompRaidDay2023">Meetup Event:</a> <span style="font-family:'texgyreadventorregular';">Mega Garchomp Raid Day (Saturday, November 11th 2023)</span></h5>
+                        <p>
+                           Mega Garchomp will make its earthshaking Pokémon GO debut and will be featured in raids during this special <a href="https://pokemongolive.com/post/mega-garchomp-raid-day-2023">Raid Day!</a>
+                        </p>
+                        <div class="assetGroup">
+                              <div class="asset">
+                              <a href="./assets/2023/2023-11-11-raid-day/Mega-Garchomp-RAIDFEST.png" target="_blank">
+                              <img  alt="Graphical Banner with the text RAIDFEST FEAT MEGA GARCHOMP" src="./assets/2023/2023-11-11-raid-day/Mega-Garchomp-RAIDFEST.png">
+                              <div class="asset-label">
+                                 <img src="./img/gdrive-folder-icon.png" alt="Drive Folder Label">
+                              </div>
+                              <label>Promotional Banner</label>
+                              </a>
+                              <p>
+                                 <div class="credits">
+                                    Shared by MakoMW of the <a href="https://discord.gg/dGPHjdKGZm" target="_blank">Community Day League team</a>
+                                 </div>
+                              </p>
+                           </div>
+                        </div>
+                        <hr style="margin:25px;border-color: #555;">
+                     </div>
+                     <!-- End Mega Garchomp Raid Day -->
                      <!-- Start Wooper CDay -->
                      <div class="asset-section" data-type="community-day">
                         <h5><a class="page-anchor" id="WooperNov23" href="#WooperNov2023">Meetup Event:</a> <span style="font-family:'texgyreadventorregular';">Wooper Community Day (November 5th 2023)</span></h5>
