Added Pokestop Gift

--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
                         <p>
                         The highly anticipated Community Day Finale in December is on the horizon, with the exact date still pending confirmation. This special event is set to bring together all the Pokémon featured in Community Days throughout the year, promising an action-packed and exciting experience for trainers. Stay tuned for further details once the date is officially announced.                        </p>
                         <div class="assetGroup">
-                              <div class="asset">
+                           <div class="asset">
                               <a href="https://drive.google.com/drive/folders/1-WV9xyngzvTEVLEhOYsoKJbCMuAQ2c6J?usp=share_link" target="_blank">
                               <img  alt="December Community Day Hexagon Badge" src="./assets/2023/2023-12-00-community-day/Finale_Badge.PNG">
                               <div class="asset-label">
@@ -117,6 +117,21 @@
                                  Designed to seamlessly fill the void left by the Former Silph Road's asset team. Inside this folder you will also find alternate versions, as well as pre-made templates for button makers. Be sure to print them at actual size with borderless printing if your printer supports it.
                                  <div class="credits">
                                     Badge Design: <a href="https://www.instagram.com/lux.imity_xx/">xLuximityx</a>
+                                 </div>
+                              </p>
+                           </div>
+                           <div class="asset">
+                              <a href="https://drive.google.com/file/d/17vpBWQmbTsDdyqBq6ZRhdEeh5aCYeFYX/view?usp=drive_link" target="_blank">
+                              <img  alt="Photograph of a PokeStop Gift in Real Life" src="./assets/general/PokestopGift.png">
+                              <div class="asset-label">
+                                 <img src="./img/pdf.png" alt="PDF File Label">
+                              </div>
+                              <label>PokeStop Gift Box Printable</label>
+                              </a>
+                              <p>
+                                 3 Page PDF Based on the Go Fest from Home Printable gift box design, this was redesigned to be easier to assemble, and a more realisic size. Pair with a breadbag and ribbon for a perfect style!
+                                 <div class="credits">
+                                    Designed by <a href="https://social.pogo.community/@forte">Forte</a>
                                  </div>
                               </p>
                            </div>
