--- a/index.html
+++ b/index.html
@@ -139,6 +139,32 @@
                         <hr style="margin:25px;border-color: #555;">
                      </div>
                      <!-- End Dec CDay -->
+                     <!-- Start Nov CDay Classic -->
+                     <div class="asset-section" data-type="community-day">
+                        <h5><a class="page-anchor" id="Nov23Classic" href="#Nov23Classic">Meetup Event:</a> <span style="font-family:'texgyreadventorregular';">Mareep Community Day Classic (November 25, 2023)</span></h5>
+                        <p>
+                        For the final Community Day Classic of the year, Niantic has chosen to bring Mareep back again into the spotlight. Find out more details from the <a href="https://pokemongolive.com/post/communityday-classic-mareep/" target="_blank">Blogpost</a>
+                        </p>
+                        <div class="assetGroup">
+                           <div class="asset">
+                              <a href="https://drive.google.com/drive/folders/10-WEwQGnl0Y13TYNiXV9RMlB3mN7o1ZQ?usp=drive_link" target="_blank">
+                              <img  alt="Mareep Community Day Classic Hexagon Badge" src="./assets/2023/2023-11-25-community-day-classic/Mareep_HexBadge.png">
+                              <div class="asset-label">
+                                 <img src="./img/gdrive-folder-icon.png" alt="Drive Folder Label">
+                              </div>
+                              <label>Mareep Classic Hex Badges</label>
+                              </a>
+                              <p>
+                                 Designed to seamlessly fill the void left by the Former Silph Road's asset team. Inside this folder you will also find alternate versions, as well as pre-made templates for button makers. Be sure to print them at actual size with borderless printing if your printer supports it.
+                                 <div class="credits">
+                                    Badge Design: <a href="https://www.instagram.com/lux.imity_xx/">xLuximityx</a>
+                                 </div>
+                              </p>
+                           </div>
+                        </div>
+                        <hr style="margin:25px;border-color: #555;">
+                     </div>
+                     <!-- End Nov CDay Classic -->
                      <!-- Start Mega Garchomp Raid Day -->
                      <div class="asset-section" data-type="special-events">
                         <h5><a class="page-anchor" id="GarchompRaidDay2023" href="#GarchompRaidDay2023">Meetup Event:</a> <span style="font-family:'texgyreadventorregular';">Mega Garchomp Raid Day (Saturday, November 11th 2023)</span></h5>
