Updating December Dates

--- a/index.html
+++ b/index.html
@@ -101,9 +101,9 @@
                   <div class="text-left">
                      <!-- Start Dec CDay -->
                      <div class="asset-section" data-type="community-day">
-                        <h5><a class="page-anchor" id="FinalDec23" href="#FinalDec2023">Meetup Event:</a> <span style="font-family:'texgyreadventorregular';">December Community Day (December TBC 2023)</span></h5>
+                        <h5><a class="page-anchor" id="FinalDec23" href="#FinalDec2023">Meetup Event:</a> <span style="font-family:'texgyreadventorregular';">December Community Day (December 16th & 17th 2023)</span></h5>
                         <p>
-                        The highly anticipated Community Day Finale in December is on the horizon, with the exact date still pending confirmation. This special event is set to bring together all the Pokémon featured in Community Days throughout the year, promising an action-packed and exciting experience for trainers. Stay tuned for further details once the date is officially announced.                        </p>
+                        The highly anticipated Community Day Finale in December is on the horizon, This special event is set to bring together all the Pokémon featured in Community Days throughout the year, promising an action-packed and exciting experience for trainers. Stay tuned for further details once the date is officially announced.</p>
                         <div class="assetGroup">
                            <div class="asset">
                               <a href="https://drive.google.com/drive/folders/1-WV9xyngzvTEVLEhOYsoKJbCMuAQ2c6J?usp=share_link" target="_blank">
