--- a/index.html
+++ b/index.html
@@ -210,6 +210,35 @@
                                  </div>
                               </p>
                            </div>
+                           <div class="asset">
+                              <a href="https://www.printables.com/model/607738-low-poly-porygon-piggy-bank" target="_blank">
+                              <img  alt="" src="./assets/2024/Season13-TimelessTravels/2024-01-20-community-day-classic/low_poly_porygon_flowalistik_piggy-bank_5_hero.webp">
+                              <div class="asset-label">
+                                 <img src="https://printables.com/favicon.ico" alt="Printables Link Label">
+                              </div>
+                              <label>Low-poly Porygon - Piggy Bank</label>
+                              </a>
+                              <p>
+                                 <div class="credits">
+                                    Paid Design by <a href="https://www.printables.com/@flowalistik" target="_blank">Agustin Arroyo</a>
+                                 </div>
+                              </p>
+                           </div>
+                           <div class="asset">
+                              <a href="https://www.printables.com/model/607738-low-poly-porygon-piggy-bank" target="_blank">
+                              <img  alt="" src="./assets/2024/Season13-TimelessTravels/2024-01-20-community-day-classic/low_poly_porygon_flowalistik_piggy-bank_5_hero.webp">
+                              <div class="asset-label">
+                                 <img src="https://printables.com/favicon.ico" alt="Printables Link Label">
+                              </div>
+                              <label>Low-poly Porygon</label>
+                              </a>
+                              <p>
+                                 Great design for bulk production. I scaled them to 25mm tall, and printed them at .2mm layer height, 3 walls, and 5% infill, and they came out great!
+                                 <div class="credits">
+                                    Paid Design by <a href="https://www.printables.com/@flowalistik" target="_blank">Agustin Arroyo</a>
+                                 </div>
+                              </p>
+                           </div>
                         </div>
                         <hr style="margin:25px;border-color: #555;">
                      </div>
@@ -383,6 +412,20 @@
                               <p>
                                  <div class="credits">
                                     Badge Design: <a href="https://x.com/LakeshorePOGO" target="_blank">LakeshorePOGO</a>
+                                 </div>
+                              </p>
+                           </div>
+                           <div class="asset">
+                              <a href="https://www.printables.com/model/691996-pokemon-go-community-day-80-coin-rowlet" target="_blank">
+                              <img  alt="" src="./assets/2024/Season13-TimelessTravels/2024-01-06-community-day/rowlet_coin.webp">
+                              <div class="asset-label">
+                                 <img src="https://printables.com/favicon.ico" alt="Printables Link Label">
+                              </div>
+                              <label>L808Asher's Rowlet Coin</label>
+                              </a>
+                              <p>
+                                 <div class="credits">
+                                    Coin Design: <a href="https://www.printables.com/@808Asher" target="_blank">808Asher</a>
                                  </div>
                               </p>
                            </div>
