minor text fixes

--- a/index.html
+++ b/index.html
@@ -421,7 +421,7 @@
                               <div class="asset-label">
                                  <img src="https://printables.com/favicon.ico" alt="Printables Link Label">
                               </div>
-                              <label>L808Asher's Rowlet Coin</label>
+                              <label>808Asher's Rowlet Coin</label>
                               </a>
                               <p>
                                  <div class="credits">
