Minor Text Fixes

--- a/index.html
+++ b/index.html
@@ -179,8 +179,10 @@
                               <label>Cristina's Badge Design</label>
                               </a>
                               <p>
-                                 Designed by <a href="https://www.instagram.com/Christina_Joss/">Christina_Joss</a> for her own community, and shared with us!
-                              </p>
+                                 <div class="credits">
+                                    Designed by <a href="https://www.instagram.com/Christina_Joss/">Christina_Joss</a> for her own community, and shared with us!
+                                 </div>
+                              </p> 
                            </div>
                            <div class="asset">
                               <a href="./assets/2024/Season13-TimelessTravels/2024-01-20-community-day-classic/LakeshorePOGO_porygon_1.png" target="_blank">
@@ -341,7 +343,9 @@
                               <label>Cristina's Badge Design</label>
                               </a>
                               <p>
-                                 Designed by <a href="https://www.instagram.com/Christina_Joss/">Christina_Joss</a> for her own community, and shared with us!
+                                 <div class="credits">
+                                    Designed by <a href="https://www.instagram.com/Christina_Joss/">Christina_Joss</a> for her own community, and shared with us!
+                                 </div>
                               </p>
                            </div>
                            <div class="asset">
