Minor Text Fixes

--- a/index.html
+++ b/index.html
@@ -227,15 +227,15 @@
                               </p>
                            </div>
                            <div class="asset">
-                              <a href="https://www.printables.com/model/607738-low-poly-porygon-piggy-bank" target="_blank">
-                              <img  alt="" src="./assets/2024/Season13-TimelessTravels/2024-01-20-community-day-classic/low_poly_porygon_flowalistik_piggy-bank_5_hero.webp">
+                              <a href="https://www.printables.com/model/605944-low-poly-porygon/comments" target="_blank">
+                              <img  alt="" src="./assets/2024/Season13-TimelessTravels/2024-01-20-community-day-classic/lowpoly_porygon_flowalistik_hero.webp">
                               <div class="asset-label">
                                  <img src="https://printables.com/favicon.ico" alt="Printables Link Label">
                               </div>
                               <label>Low-poly Porygon</label>
                               </a>
                               <p>
-                                 Great design for bulk production. I scaled them to 25mm tall, and printed them at .2mm layer height, 3 walls, and 5% infill, and they came out great!
+                                 Great design for bulk production. I scaled them to 25mm tall, and printed them at .2mm layer height, 3 walls, and 5% infill. Then I just filled the bed with them and they came out great!
                                  <div class="credits">
                                     Paid Design by <a href="https://www.printables.com/@flowalistik" target="_blank">Agustin Arroyo</a>
                                  </div>
