--- a/index.html
+++ b/index.html
@@ -247,7 +247,7 @@
                      <!-- End Porygon Community Day Classic -->
                      <!-- Start Thundurus Raid Hour -->
                      <div class="asset-section" data-type="raid-event" data-year="2024">
-                        <h5><a class="page-anchor" id="hisuian-typhlosion-raid-day" href="#hisuian-typhlosion-raid-day">Raid Day:</a> <span style="font-family:'texgyreadventorregular';">Hisuian Typhlosion</span></h5>
+                        <h5><a class="page-anchor" id="hisuian-typhlosion-raid-day" href="#hisuian-typhlosion-raid-day">Raid Hour:</a> <span style="font-family:'texgyreadventorregular';">Thundurus (Therian Forme)</span></h5>
                         <p>
                            A Raid Hour featuring Therian Forme Thundurus is scheduled from 6 to 7 pm Local Time. During this hour there will be an increased number of five-star Raids. Check out <a href="https://leekduck.com/events/raidhour20240117/">LeekDuck</a> for details.
                         </p>
