More Minor Text Fixes

--- a/index.html
+++ b/index.html
@@ -275,7 +275,7 @@
                      <div class="asset-section" data-type="raid-event" data-year="2024">
                         <h5><a class="page-anchor" id="hisuian-typhlosion-raid-day" href="#hisuian-typhlosion-raid-day">Raid Day:</a> <span style="font-family:'texgyreadventorregular';">Hisuian Typhlosion</span></h5>
                         <p>
-                        For the first Raid Hour of the new year we get treated to an Ultra Beast! Enjoy the assets below promoting your Raid Hour meetup. Which you see in your community will depend on your region. Check out <a href="https://leekduck.com/events/hisuian-typhlosion-raid-day/">LeekDuck</a> for details.
+                           Hisuian Typhlosion Raid Day will take place on January 14, 2024 from 2 pm to 5 pm. Check out <a href="https://leekduck.com/events/hisuian-typhlosion-raid-day/">LeekDuck</a> for details.
                         </p>
                         <div class="assetGroup">
                            <div class="asset">
