Added Rocket's game corner link

--- a/index.html
+++ b/index.html
@@ -137,7 +137,7 @@
                      <div class="asset-section" data-type="community-day" data-year="2024">
                         <h5><a class="page-anchor" id="Jan2024CommunityDayClassic" href="#Jan2024CommunityDayClassic">Community Day Classic:</a> <span style="font-family:'texgyreadventorregular';">Porygon</span></h5>
                         <p>
-                        You don't need to gamble at Rocket Game Corner for your porygon anymore! They're back for another round this January Community Day Classic.
+                        You don't need to gamble at <a href="https://bulbapedia.bulbagarden.net/wiki/Celadon_Game_Corner">Rocket's Game Corner</a> for your porygon anymore! They're back for another round this January Community Day Classic.
                         </p>
                         <div class="assetGroup">
                            <div class="asset">
