--- a/thin.html
+++ b/thin.html
@@ -193,7 +193,7 @@
                               <div class="asset-label">
                                  <img src="./img/png.png" alt="PNG File Label">
                               </div>
-                              <label>LakeshorePOGO's Rowlet Button 2</label>
+                              <label>LakeshorePOGO's Porygon Button 2</label>
                               </a>
                               <p>
                                  <div class="credits">
@@ -319,6 +319,21 @@
                               </a>
                               <p>
                                  Great for use to make buttons or stickers, plenty of extra background to crop to desired size.
+                              </p>
+                              <div class="credits">
+                                 Badge Design: <a href="https://www.instagram.com/lux.imity_xx/">xLuximityx</a>
+                              </div>
+                           </div>
+                           <div class="asset">
+                              <a href="https://drive.google.com/open?id=1--Zx4RFwPNmkNkyXL9AP2RpQ3WtGVSmJ&usp=drive_fs" target="_blank">
+                              <img  alt="" src="./assets/2024/Season13-TimelessTravels/2024-01-06-community-day/StickerStack.png">
+                              <div class="asset-label">
+                                 <img src="./img/gdrive-folder-icon.png" alt="Google Drive Folder Label">
+                              </div>
+                              <label>Rowlet CDay Stickers w/ Cutpaths</label>
+                              </a>
+                              <p>
+                                 Great for use to make buttons or stickers, included is SVG Cutpaths for use on desktop sticker cutting machines
                               </p>
                               <div class="credits">
                                  Badge Design: <a href="https://www.instagram.com/lux.imity_xx/">xLuximityx</a>
