--- a/thin.html
+++ b/thin.html
@@ -325,7 +325,7 @@
                               </div>
                            </div>
                            <div class="asset">
-                              <a href="https://drive.google.com/open?id=1--Zx4RFwPNmkNkyXL9AP2RpQ3WtGVSmJ&usp=drive_fs" target="_blank">
+                              <a id="RowletStickers" href="https://drive.google.com/open?id=1--Zx4RFwPNmkNkyXL9AP2RpQ3WtGVSmJ&usp=drive_fs" target="_blank">
                               <img  alt="" src="./assets/2024/Season13-TimelessTravels/2024-01-06-community-day/StickerStack.png">
                               <div class="asset-label">
                                  <img src="./img/gdrive-folder-icon.png" alt="Google Drive Folder Label">
